<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".AccountActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="40dp"
            android:fontFamily="monospace"
            android:text="@string/name"
            android:textColor="#000000"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="40dp"
            android:autofillHints=""
            android:fontFamily="monospace"
            android:hint="@string/john_doe"
            android:textColor="#000000"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvUId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            android:fontFamily="monospace"
            android:text="@string/uid"
            android:textColor="#000000"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="40dp">

            <EditText
                android:id="@+id/etUId"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:fontFamily="monospace"
                android:hint="@string/_12345"
                android:textColor="#000000"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tvUId3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:fontFamily="monospace"
                android:text="@string/peezy"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="24sp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tvAccountNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            android:fontFamily="monospace"
            android:text="A/c Number"
            android:textAlignment="viewStart"
            android:textColor="#000000"
            android:textSize="24sp"/>

        <EditText
            android:id="@+id/etAccountNo"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="40dp"
            android:hint="106 54356 234"
            android:inputType="number"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvBranch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            android:fontFamily="monospace"
            android:text="Branch Code"
            android:textColor="#000000"
            android:textSize="24sp"/>

        <EditText
            android:id="@+id/etBranch"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="40dp"
            android:hint="HSBC0400112"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="40dp">

            <TextView
                android:id="@+id/tvSecurity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="monospace"
                android:text="@string/security"
                android:textColor="#000000"
                android:textSize="24sp"/>

            <Button
                android:id="@+id/btnSetSecurity"
                android:layout_width="88dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="40dp"
                android:background="#FFFFFF"
                android:text="@string/set_up"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </LinearLayout>

        <Button
            android:id="@+id/btnSaveUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:background="#FBDC7F"
            android:text="@string/save"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#362A29"
            android:textSize="24sp"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="13dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:onClick="openMainActivity"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/wallet_img"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/house" />

            <TextView
                android:id="@+id/wallet_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="Home"
                android:textColor="#a6b0b9"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:onClick="openFriendsActivity"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/chart_img"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/friendship" />

            <TextView
                android:id="@+id/chart_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="Friends"
                android:textColor="#a6b0b9"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:onClick="openQuickPayActivity"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/setting_img"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/scan" />

            <TextView
                android:id="@+id/setting_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="Quick Pay"
                android:textColor="#a6b0b9"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:elevation="5dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/trading_img"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/money_bag" />

            <TextView
                android:id="@+id/trading_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="Account"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:onClick="openProfileActivity"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/alert_img"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/boy" />

            <TextView
                android:id="@+id/alert_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="Profile"
                android:textColor="#a6b0b9"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>